added classes and coresponding selectors to HTML elements

--- a/assets/style.css
+++ b/assets/style.css
@@ -2,3 +2,20 @@
     box-sizing: border-box;
     border: 1px solid red;
 }
+
+body {
+
+    position: ;
+}
+
+header {
+
+}
+
+main {
+
+}
+
+footer {
+
+}
