added position rules to each element selector

--- a/assets/style.css
+++ b/assets/style.css
@@ -4,18 +4,21 @@
 }
 
 body {
-
-    position: ;
+    
+    position: relative;
 }
 
 header {
 
+    position: relative;
 }
 
 main {
 
+    position: relative;
 }
 
 footer {
 
+    position: relative;
 }
