--- a/assets/style.css
+++ b/assets/style.css
@@ -6,20 +6,24 @@
 
 body {
     
+    display: block;
     position: relative;
 }
 
 header {
-
+    
+    display: block;
     position: relative;
 }
 
 main {
 
+    display: block;
     position: relative;
 }
 
 footer {
 
+    display: block;
     position: relative;
 }
