--- a/assets/style.css
+++ b/assets/style.css
@@ -1,7 +1,7 @@
 *{
     box-sizing: border-box;
     border: 1px solid red;
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-family: 'Times New Roman', Times, serif;
 }
 
 body {
