--- a/assets/style.css
+++ b/assets/style.css
@@ -2,24 +2,33 @@
     box-sizing: border-box;
     border: 1px solid red;
     font-family: 'Times New Roman', Times, serif;
+    padding: 0;
+    margin: 0;
 }
 
 body {
     
-    display: block;
-    position: relative;
+
 }
 
 header {
 
-    display: block;
+    display: inline-block;
     position: relative;
+}
+
+nav {
+
+    display: inline-block;
+    position: relative
 }
 
 main {
 
     display: block;
     position: relative;
+    padding: 0 auto;
+    margin: 0 auto;
 }
 
 footer {
