added main margin and padding

--- a/assets/style.css
+++ b/assets/style.css
@@ -12,7 +12,7 @@ body {
 }
 
 header {
-
+    padding: 20px 20px;
     display: inline-block;
     position: relative;
 }
@@ -23,16 +23,28 @@ nav {
     position: relative
 }
 
+#nav-list {
+
+    list-style-type: none;
+    display: inline-block;
+}
+
+#nav-list li {
+
+    display: inline-block;
+}
+
 main {
 
+    
     display: block;
     position: relative;
-    padding: 0 auto;
+    padding: 106px;
     margin: 0 auto;
 }
 
 footer {
-
+    padding: 20px;
     display: block;
     position: relative;
 }
