--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -19,6 +19,7 @@ header h1 {
     justify-content: space-between;
     align-items: center;
     min-height: 10vh;
+    font-size: 1rem;
 }
 
 nav {
