--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,6 +11,7 @@ body {
 
 header h1 {
     padding-left: 40px;
+    
 }
 
 .header {
@@ -21,6 +22,7 @@ header h1 {
     min-height: 10vh;
     font-size: 1rem;
 }
+
 
 nav {
     display: flex;
@@ -87,9 +89,13 @@ header h1 {
     padding-left: 30px;
 }
 
-footer {
+.footer {
     display: flex;
-    flex-direction: column;
-    justify-content: flex-end;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
     min-height: 10vh;
+    font-size: 1rem;
 }
+
+
