--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -98,4 +98,16 @@ header h1 {
     font-size: 1rem;
 }
 
+section.external-links {
+    display: flex;
+    align-items: center;
+    padding: 10px;
+}
+
+.external-links a {
+    padding: 14px 20px;
+    text-decoration: none;
+    text-align: center;
+    color: black;
+}
 
