updated footer format

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -92,7 +92,7 @@ header h1 {
 .footer {
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
+    justify-content: center;
     align-items: center;
     min-height: 10vh;
     font-size: 1rem;
