--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,6 +15,10 @@ header h1 {
     
 }
 
+h3 {
+    font-weight: lighter;
+}
+
 .header {
     display: flex;
     flex-direction: row;
@@ -72,6 +76,11 @@ main {
 .intro {
     flex: 3;
     padding-right: 20px;
+}
+
+.other-work-heading {
+    min-width: 100%;
+    padding-left: 40px;
 }
 
 .other-work {
