--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -78,6 +78,11 @@ main {
     padding-right: 20px;
 }
 
+.bottom-section {
+    display: flex;
+    padding: 20px;
+}
+
 .other-work-heading {
     min-width: 100%;
     padding-left: 40px;
@@ -91,7 +96,8 @@ main {
 }
 
 img {
-    max-width: 300px;
+    max-width: 400px;
+    flex: 0 1 50%;
 }
 
 
@@ -125,6 +131,7 @@ section.external-links {
 @media screen and (max-width: 992px) {
     body {
         flex-direction: column;
+        max-width: 100%;
     }
 
     .top-section {
@@ -144,7 +151,15 @@ section.external-links {
 
 @media screen and (max-width: 480px) {
     
+    .top-section {
+        max-width: 100%;
+    }
+
     iframe {
+        max-width: 100%;
+    }
+
+    .bottom-section {
         max-width: 100%;
     }
 }
