--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -98,11 +98,11 @@ main {
 img {
     max-width: 400px;
     flex: 0 1 50%;
+    transition-duration: .5s;
 }
 
-
-header h1 {
-    padding-left: 30px;
+img:hover {
+    outline: 10px solid lightgreen;
 }
 
 .footer {
